--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# Dependencies
-node_modules/
-backend/target/
-backend/temp_backup/
-
 # Environment variables
 .env
 .env.local
@@ -10,64 +5,84 @@ backend/temp_backup/
 .env.test.local
 .env.production.local
 
-# IDE
-.idea/
-.vscode/
-*.iml
+# Product images and data
+backend/Products/
+ecommerce.products.json
 
-# OS
-.DS_Store
-Thumbs.db
-
-# Logs
-*.log
-logs/
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-
-# Build outputs
-dist/
-build/
-
-# Maven
-backend/target/
-
-# Spring Boot
+# Java
+*.class
 *.jar
 *.war
 *.ear
 *.zip
 *.tar.gz
 *.rar
+target/
+!target/*.jar
+
+# Maven
+.mvn/
+mvnw
+mvnw.cmd
+.mvn/wrapper/maven-wrapper.jar
+
+# IDE
+.idea/
+*.iws
+*.iml
+*.ipr
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Node modules (if any)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+dist/
+build/
+out/
 
 # Temporary files
 *.tmp
 *.temp
+temp/
+tmp/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Docker
+.dockerignore
+
+# Spring Boot
+application-*.properties
+application-*.yml
+!application.yml
+!application-dev.yml
+!application-prod.yml
+!application-docker.yml
+
+# Backup files
+*.bak
+*.backup
+*_backup/
