fix: resolve TypeScript errors and backend 404 issue
- Add missing DTO types (UserDto, ProductDto, CartDto, etc.) to api.ts
- Fix missing initialPageParam in useInfiniteQuery calls
- Add missing alt prop to ProductGallery component
- Fix AddToCartAnimation component props
- Change Badge variant from 'destructive' to 'error'
- Update rating properties to use ratings object structure
- Add root endpoint to backend HealthController to resolve 404 error

--- a/.env
+++ b/.env
@@ -2,12 +2,13 @@
 #APP_URL=http://localhost:8080
 #FRONTEND_URL=http://localhost:3000
 
-# MongoDB (local)
-# MONGO_DB=ecommerce
-# SPRING_DATA_MONGODB_URI = mongodb://localhost:27017/ecommerce
-SPRING_DATA_MONGODB_URI=mongodb+srv://echo-user:viKTZFBugeewEFX6@eshop-cluster.boposz6.mongodb.net/?retryWrites=true&w=majority&appName=Eshop-cluster
-SPRING_DATA_MONGODB_DATABASE=ecommerce
 
+#SPRING_DATA_MONGODB_URI=mongodb+srv://echo-user:viKTZFBugeewEFX6@eshop-cluster.boposz6.mongodb.net/?retryWrites=true&w=majority&appName=Eshop-cluster
+#SPRING_DATA_MONGODB_DATABASE=ecommerce
+
+# MongoDB (local)
+MONGO_DB=ecommerce
+SPRING_DATA_MONGODB_URI = mongodb://localhost:27017/ecommerce
 # Redis (local)
 REDIS_HOST=localhost
 REDIS_PORT=6379
