--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "product-image-mapper",
+  "name": "image-path-updater",
   "version": "1.0.0",
-  "description": "Script to map local product images to MongoDB database",
-  "main": "update-product-images.js",
+  "description": "Script to update product image paths in MongoDB Atlas",
+  "main": "update-image-paths.js",
   "scripts": {
-    "start": "node update-product-images.js",
-    "test": "node update-product-images.js --dry-run"
+    "start": "node update-image-paths.js",
+    "update-images": "node update-image-paths.js"
   },
   "dependencies": {
     "mongodb": "^6.20.0"
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "keywords": [
     "mongodb",
     "ecommerce",
-    "image-mapping",
-    "product-management"
+    "images",
+    "update"
   ],
-  "author": "Your Name",
+  "author": "",
   "license": "MIT"
 }
