Fix CORS configuration error
- Set allowCredentials to false to avoid CORS issues
- Update production CORS configuration with proper defaults
- This should resolve the CORS error preventing API access

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -24,7 +24,7 @@ server:
 # CORS configuration for Vercel frontend
 app:
   cors:
-    allowed-origins: ${FRONTEND_URL:https://your-vercel-app.vercel.app}
+    allowed-origins: ${FRONTEND_URL:http://localhost:3000,https://your-vercel-app.vercel.app}
     max-age: 3600
   images:
     base-path: /app/Products
